Cleanup errors and warnings