@@ -1,10 +1,12 @@
-// Copyright (c) 2018, 2021, Oracle and/or its affiliates.
+// Copyright (c) 2018, 2023, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.json.mojo;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -23,8 +25,8 @@ public class TestMain implements Main {
   private Map<String, Object> schema;
   private Map<String, Object> markdownSchema;
 
-  TestMain() throws MalformedURLException {
-    classpathResource = new URL("file:abc");
+  TestMain() throws MalformedURLException, URISyntaxException {
+    classpathResource = new URI("file:abc").toURL();
   }
 
   URL[] getClasspath() {
