@@ -1,4 +1,4 @@
-// Copyright (c) 2020, 2021, Oracle and/or its affiliates.
+// Copyright (c) 2020, 2023, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.helpers;
@@ -8,7 +8,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 
 /**
@@ -63,7 +62,7 @@ public class ConfigMapSplitter<T extends SplitterTarget> {
 
   @Nonnull
   private List<DataEntry> getSortedEntrySizes(Map<String, String> data) {
-    return data.entrySet().stream().map(DataEntry::new).sorted().collect(Collectors.toList());
+    return data.entrySet().stream().map(DataEntry::new).sorted().toList();
   }
 
   private void startSplitResult() {
